# ft_irc

./: .gitignore  .test.cpp.swp  ACommand.cpp  ACommand.hpp  CAP.cpp  CMakeLists.txt  Channel.cpp  Channel.hpp  ChannelMenager.cpp  ChannelMenager.hpp  Client.cpp  Client.hpp  Colors.h  Commands.cpp  Commands.hpp  Get.cpp  Get.hpp  INVITE.cpp  INVITE.hpp  Irc.hpp  Irssi and Libera chat.md  JOIN.cpp  JOIN.hpp  KICK.cpp  MODE.cpp  MODE.hpp  Makefile  NICK.cpp  NICK.hpp  PART.cpp  PASS.cpp  PASS.hpp  PING.cpp  PING.hpp  PRIVMSG.cpp  PRIVMSG.hpp  PrintTime.cpp  PrintTime.hpp  QUIT.hpp  RPL.cpp  (+20 more)
ircserv.dSYM/Contents/Resources/DWARF/: ircserv
ircserv.dSYM/Contents/Resources/Relocations/aarch64/: ircserv.yml
ircserver.dSYM/Contents/: Info.plist
md/: Channels.md  Commands.md  For evaluation.md  Irssi and Libera chat.md  Messages.md  The Socket API.md  getaddrinfo & gethostname.md  select().md
md/.obsidian/: appearance.json  workspace.json
md/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
md/Excalidraw/: Drawing 2024-02-21 12.48.01.excalidraw.excalidraw  Drawing 2024-02-21 12.48.01.excalidraw.md  Drawing 2024-02-21 15.14.49.excalidraw.excalidraw  Drawing 2024-02-21 15.14.49.excalidraw.md
srcs/: Channel.cpp  Channel.hpp  ChannelMenager.cpp  ChannelMenager.hpp  Client.hpp  Get.cpp  Get.hpp  RPL.cpp  RPL.hpp  Server.cpp  Server.hpp  main.cpp
srcs/commands/: ACommand.cpp  ACommand.hpp  CAP.cpp  CAP.hpp  INVITE.cpp  JOIN.cpp  JOIN.hpp  KICK.cpp  KICK.hpp  MODE.cpp  MODE.hpp  NICK.cpp  NICK.hpp  PART.cpp  PART.hpp  PASS.cpp  PASS.hpp  PING.cpp  PING.hpp  QUIT.cpp  SQUIT.cpp  SQUIT.hpp  TOPIC.cpp  TOPIC.hpp  USER.cpp  USER.hpp  WHO.cpp  WHO.hpp  WHOIS.cpp  WHOIS.hpp
